--- a/movies-imdb/src/Styles/Home/_Movies.scss
+++ b/movies-imdb/src/Styles/Home/_Movies.scss
@@ -12,7 +12,7 @@ $center: center;
     &:hover {
         transform: translate(0px, -5px);
         transition: ease-out 0.5s;
-        box-shadow: 5px 5px 5px black;
+        box-shadow: 2px 2px 5px rgb(41, 41, 41);
     }
 }
 .movies__elements {
@@ -43,12 +43,12 @@ $center: center;
         grid-template-columns: repeat(4, 1fr);
     }
 }
-@media screen and (max-width: 937px) {
+@media screen and (max-width: 953px) {
     .movies__elements {
         grid-template-columns: repeat(3, 1fr);
     }
 }
-@media screen and (max-width: 695px) {
+@media screen and (max-width: 710px) {
     .movies__elements {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -56,27 +56,3 @@ $center: center;
         width: 160px;
     }
 }
-@media screen and (max-width: 501px) {
-    .movies__elements > img {
-        width: 90%;
-    }
-    .movies__elements--img {
-        width: 160px;
-    }
-}
-
-////// Movie Component
-
-// .movies__elements1 {
-//     background-image: radial-gradient(circle, #d3d3d3, $whiteColor);
-//     display: grid;
-//     grid-template-columns: repeat(4, 4fr);
-//     grid-gap: 40px;
-//     justify-items: center;
-//     margin-bottom: 20px;
-// }
-// .movie-actor {
-//     background: gray;
-//     display: flex;
-//     flex-shrink: 2;
-// }
