--- a/movies-imdb/src/Styles/MoviePage/_Navigation.scss
+++ b/movies-imdb/src/Styles/MoviePage/_Navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: #6d6d6d;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+    background: #555555;
     padding: 6px 0;
 }
 .navigation__link {
