Refactored The NotFound Component

--- a/movies-imdb/src/Styles/_NotFound.scss
+++ b/movies-imdb/src/Styles/_NotFound.scss
@@ -3,6 +3,7 @@
 }
 .notfound__title {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
