Refactored The LoadButton Component

--- a/movies-imdb/src/Styles/Home/_LoadButton.scss
+++ b/movies-imdb/src/Styles/Home/_LoadButton.scss
@@ -3,6 +3,6 @@ $movies__button--load: #16d47b;
 
 .loadmore__button button {
     color: $whiteColor;
-    background: $movies__button--load;
+    background-color: $movies__button--load;
     margin-bottom: 12px;
 }
