--- a/movies-imdb/src/Styles/MoviePage/_Navigation.scss
+++ b/movies-imdb/src/Styles/MoviePage/_Navigation.scss
@@ -5,8 +5,13 @@
     padding: 6px 0;
 }
 .navigation__link {
-    font-size: 17px;
+    font-size: 18px;
     color: rgb(44, 44, 44);
+    text-decoration: none;
+    &:hover {
+        color: chartreuse;
+        text-decoration: none;
+    }
 }
 .navigation__span {
     font-size: 16px;
