Refactor The LoadButton Component

--- a/movies-imdb/src/Styles/_Footer.scss
+++ b/movies-imdb/src/Styles/_Footer.scss
@@ -12,7 +12,7 @@ footer {
     border-bottom: 1px solid #545454;
 }
 .footer__links a {
-    padding: 15px;
+    padding: 1rem;
 }
 .footer__links a[name="instagram"] {
     color: #e1306c;
