--- a/movies-imdb/src/Styles/Main.scss
+++ b/movies-imdb/src/Styles/Main.scss
@@ -1,7 +1,4 @@
-body {
-    margin: 0;
-    padding: 0;
-}
+@import "./Reset/_Reset";
 @import "_Header";
 @import "./Home/Main/_Home";
 @import "./MoviePage/Main/_MoviePage";
