--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -39,9 +39,9 @@ header img {
 
 .sorting {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 1.2rem;
-  flex-wrap: wrap;
 }
 
 .sorting__button:hover :first-child {
@@ -50,8 +50,8 @@ header img {
 }
 
 .sorting i {
-  color: white;
   font-size: 1.5rem;
+  color: white;
   margin: 6px;
   padding: 3px;
   border: 1px solid #ffffff;
@@ -69,7 +69,10 @@ header img {
 }
 
 .searchbox input:focus {
-  background: #c5c5c5;
+  background: #dadada;
+  border: none;
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.397);
 }
 
 .movies {
@@ -79,12 +82,6 @@ header img {
 .movies__title {
   text-align: center;
   text-shadow: 1px 1px #1d1d1d;
-}
-
-.movies__element:hover {
-  transform: translate(0px, -5px);
-  transition: ease-out 0.5s;
-  box-shadow: 5px 5px 5px black;
 }
 
 .movies__elements {
@@ -104,6 +101,12 @@ header img {
   cursor: pointer;
 }
 
+.movies__elements--img:hover {
+  box-shadow: 2px 2px 5px #292929;
+  transform: translate(0px, -5px);
+  transition: ease-out 0.5s;
+}
+
 @keyframes AnimateGrid {
   from {
     opacity: 0;
@@ -119,13 +122,13 @@ header img {
   }
 }
 
-@media screen and (max-width: 937px) {
+@media screen and (max-width: 953px) {
   .movies__elements {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media screen and (max-width: 695px) {
+@media screen and (max-width: 710px) {
   .movies__elements {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -134,19 +137,9 @@ header img {
   }
 }
 
-@media screen and (max-width: 501px) {
-  .movies__elements > img {
-    width: 90%;
-  }
-  .movies__elements--img {
-    width: 160px;
-  }
-}
-
 .loadmore__button button {
+  background-color: #16d47b;
   color: #ffffff;
-  background: #16d47b;
-  margin-bottom: 12px;
 }
 
 .loading__icon {
@@ -169,14 +162,20 @@ header img {
 }
 
 .navigation {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background: #6d6d6d;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  background: #555555;
   padding: 6px 0;
 }
 
 .navigation__link {
-  font-size: 17px;
+  font-size: 18px;
   color: #2c2c2c;
+  text-decoration: none;
+}
+
+.navigation__link:hover {
+  color: chartreuse;
+  text-decoration: none;
 }
 
 .navigation__span {
@@ -185,9 +184,8 @@ header img {
 }
 
 .movie {
-  background-size: cover !important;
-  background-position: center !important;
-  height: 60vh;
+  background-size: cover;
+  background-position: center;
   padding: 40px 20px;
   box-sizing: border-box;
   animation: animateMovieinfo 1s;
@@ -204,15 +202,65 @@ header img {
 
 .movie__content {
   display: flex;
-  justify-content: flex-start;
-  justify-self: center;
   background: rgba(0, 0, 0, 0.7);
   border-radius: 8px;
   margin: 0 auto;
 }
 
-.movie__content img {
-  float: left;
+.movie__content--img {
+  display: flex;
+  align-self: center;
+  border-radius: 2px;
+}
+
+.movies__elements1 {
+  background-image: radial-gradient(circle, #d3d3d3, #ffffff);
+  display: grid;
+  grid-template-columns: repeat(5, 4fr);
+  grid-gap: 40px;
+  justify-items: center;
+  margin-bottom: 20px;
+}
+
+.movie-actor {
+  background: #dfdfdf;
+  display: grid;
+  padding: 10px;
+  border-radius: 5%;
+  box-shadow: 2px 2px 5px #646464;
+}
+
+.movie-actor h6 {
+  display: flex;
+  justify-self: center;
+  padding: 5px;
+}
+
+@media screen and (max-width: 710px) {
+  .movie__content--img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1194px) {
+  .movies__elements1 {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 953px) {
+  .movies__elements1 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .movies__elements1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .movies__elements1--img {
+    width: 160px;
+  }
 }
 
 footer {
@@ -225,7 +273,7 @@ footer {
 }
 
 .footer__links a {
-  padding: 15px;
+  padding: 1rem;
 }
 
 .footer__links a[name="instagram"] {
@@ -285,7 +333,6 @@ footer {
 .footer__text {
   color: #646464;
   justify-content: center;
-  padding: 8px;
 }
 
 .notfound {
@@ -294,6 +341,7 @@ footer {
 
 .notfound__title {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
