--- a/movies-imdb/src/Styles/Home/_Spinner.scss
+++ b/movies-imdb/src/Styles/Home/_Spinner.scss
@@ -2,13 +2,13 @@ $whiteColor: #ffffff;
 $greenColor: #16d47b;
 
 .loading__icon {
-    width: 50px;
-    height: 50px;
+    width: 4rem;
+    height: 4rem;
     animation: spinningButton 0.8s linear infinite;
-    border: 5px solid $whiteColor;
-    border-top: 5px solid $greenColor;
+    border: 0.3rem solid $whiteColor;
+    border-top: 0.3rem solid $greenColor;
     border-radius: 50%;
-    margin: 20px auto;
+    margin: 1.4rem auto;
 }
 @keyframes spinningButton {
     0% {
