--- a/movies-imdb/src/Styles/MoviePage/_Navs.scss
+++ b/movies-imdb/src/Styles/MoviePage/_Navs.scss
@@ -1,3 +1,8 @@
+$blackColor: #000000;
+$blueColor: rgb(0, 174, 255);
+$whiteColor: #ffffff;
+$none: none;
+
 .navigation {
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
@@ -5,15 +10,15 @@
     padding: 6px 0;
 }
 .navigation__link {
-    font-size: 18px;
-    color: rgb(44, 44, 44);
-    text-decoration: none;
+    font-size: 1.2rem;
+    color: $blackColor;
+    text-decoration: $none;
     &:hover {
-        color: chartreuse;
-        text-decoration: none;
+        color: $blueColor;
+        text-decoration: $none;
     }
 }
 .navigation__span {
     font-size: 16px;
-    color: white;
+    color: $whiteColor;
 }
